SONARTEXT-141 SecretsCheckList should be generated dynamically 2 (#190)